syntax = "proto3";

package voz.auth.domain;

import "google/protobuf/wrappers.proto";

//Account service definitions.
service Auth {
    rpc GetChildToken (ChildTokenRequest) returns (TokenReply) {}
    rpc GetParentToken (TokenRequest) returns (TokenReply) {}
    rpc GetToken (TokenRequest) returns (TokenReply) {}
}


// Request
message TokenRequest {
    string subject = 1;
    Role role = 2;
    map<string, string> custom_claims = 3;
    google.protobuf.StringValue audience = 4;
    google.protobuf.StringValue vault_token = 5;
}

message ChildTokenRequest {
    string parent_token = 1;
    bool needs_vault_auth = 2;
}

// Response
message TokenReply {
    string token = 1;
}

enum Role {
    Service = 0;
    User = 1;
}